# ESP32-Precision-TouchPad

./: .gitignore  README.md  README_CN.md  sdkconfig  sdkconfig.old
2.4G/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
2.4G/main/: 2.4G_Reciever_test.c.bak  CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
2.4G/main/usb/: usb_descriptor.c  usbhid.c  usbhid.h
2.4G/main/wireless/: broadcast.c  heartbeat.c  wifi_quene.c  wireless.h
3D Model/: README.md  README_CN.md  外壳-无指纹.SLDPRT  外壳-无指纹.STEP  外壳.SLDPRT  外壳.STEP  底壳-2mm.SLDPRT  底壳-无指纹.SLDPRT  底壳-无指纹.STEP  底壳.SLDPRT  底壳.STEP  指纹模块.SLDPRT  指纹模块固定板.step  触摸板.SLDPRT
3D Model/LENOVO ELAN 33370A/: 外壳.STEP  底壳.STEP
3D Model/XiaoMi Goodix GT7863 with Haptic Engine/: 固定板.STEP  外壳.STEP  底壳.STEP
PCB/: README.md  README_CN.md
PCB/Project/: ProPrj_ESP32 Touchpad.epro  Schematic2.epro  TouchPad Main PCB.epro  指纹模块固定板.epro
dfu/: .gitignore  main.py  nuitka.bat  pyproject.toml  usb_module.py
main/: .gitignore  CMakeLists.txt  elan_hack.c  idf_component.yml  main.c  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/i2c/: elan_i2c.c  elan_i2c.h  i2c_int.c
main/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  wlan_test.c.bak
main/main/hack/: goodi_i2c_finger_hack.c  goodix_descriptor.c  goodix_hack_dat.c  goodix_i2c_hack_dat.c  goodix_i2c_motor_hack.c  i2c_addr_scanner.c
main/main/i2c/: I2C_HID_Report.h  elan_i2c.c  elan_i2c.h  i2c_int.c  i2c_watchdog.c
main/main/i2c/ELAN/: elan_i2c.c  elan_i2c.h  elan_i2c_int.c  elan_watchdog.c  i2c_int.c
main/main/i2c/Goodix/: i2c_int.c
main/main/i2c/goodix/: goodix_i2c.c  goodix_i2c.h  goodix_i2c_int.c  goodix_watchdog.c
main/main/usb/: usb_descriptor.c  usbhid.c  usbhid.h
main/main/wifi/: vbus_det.c  wifi.h
main/main/wireless/: broadcast.c  heartbeat.c  vbus_det.c  wireless.h
main/nvs/: ptp_nvs.c  ptp_nvs.h
main/usb/: usb_descriptor.c  usbhid.c  usbhid.h
