[project]
name = "esp32-ptp-dfu"
version = "0.1.0"
description = ""
authors = [
    {name = "barryblueice",email = "barryblueice@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "hidapi (>=0.15.0,<0.16.0)",
    "usb (==0.0.83.*)",
    "pyside6 (>=6.10.2,<7.0.0)",
    "nuitka (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

